--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 .principal{
-  background-image: url("/public/assets/img/logo.jpg");
   color: yellow;
-  background-size: 100%;
-  height: 100vh;
-  background-attachment: fixed;
 }
+body{
+  background-image: url("/public/assets/img/logo.jpg");
 
+}
 .nav{
   background-image: url("/public/assets/img/fondo.jpg");
   color: white;
   position: fixed;
   background-size: 20%;
-background-position-y: center;
+  background-position-y: center;
 }
 p.card.text{
   color: black;
@@ -19,9 +18,14 @@ p.card.text{
 .horoscope{
   padding: 30px;
   background-color: purple;
+  margin-top: 10px;
 }
 .tarot{
   background-color: purple;
+  padding: 30px;
+}
+.sign{
+  background-color: orangered;
   padding: 30px;
 }
 
